<resources>
    <string name="app_name">প্রশ্ন এনালিসিস</string>
    <string name="add_topic">নতুন টপিক যুক্ত করুন</string>
    <string name="edit">সম্পাদনা</string>
    <string name="delete">ডিলিট</string>
    <string name="no_topics_yet">এখনো কোনো টপিক যুক্ত করা হয়নি।\n\u002B বাটনে ট্যাপ করে শুরু করুন।</string>

    <string name="hint_subject">বিষয়</string>
    <string name="hint_chapter">অধ্যায়</string>
    <string name="hint_topic">টপিক</string>
    <string name="hint_count">প্রশ্নসংখ্যা</string>

    <string name="label_subject">বিষয়: %1$s</string>
    <string name="label_chapter">অধ্যায়: %1$s</string>
    <string name="label_topic">টপিক: %1$s</string>
    <string name="label_count">প্রশ্নসংখ্যা: %1$d</string>
</resources>
